Fixed for lack of contrast between background in text for Digital Mirror select inputs

--- a/src/style/MyPage.less
+++ b/src/style/MyPage.less
@@ -276,10 +276,6 @@ a.btn.btn-lg.btn-default.btn-gl.discrete-login {
 
 // DigitalMirrorCard: a widget for showing the user their twitter data (experimental)
 .mirror {
-	.description {
-		//font-size: 16px;
-	}
-
 	.profile-details {
 		text-align: left;
 		line-height: 50px; 
@@ -287,19 +283,12 @@ a.btn.btn-lg.btn-default.btn-gl.discrete-login {
 
 		.form-control {
 			display: inline-block;
-			background-color: transparent;
 			padding: 4px; // align non-dropdown with dropdown input values
-			color: inherit; // ensure consistent text color across dropdown and non-dropdown fields
 		}
 
 		select {
 			width: 80%; // hack to align dropdown fields with non-dropdown fields
 			border: 1px solid #ccc; //just to make it look more modern
-		}
-
-		// hack to fix ugly dropdown 
-		button, input, select, textarea {
-			background: transparent;
 		}
 	}
 
